Move StringHash.h include to OriginTrialContext.h

This is a follow-up patch for r386009.

We added StringHash.h include in OriginTrial.h to fix build before.
However, this is used for HashSet<String>, and actually
OriginTrialContext.h has HashSet<String>.

So, we should have added StirngHash.h in OriginTrialContext.h
instead of OriginTrials.h.

BUG=601282

Review URL: https://codereview.chromium.org/1879993002

Cr-Commit-Position: refs/heads/master@{#387535}